--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,10 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "eu-west-3"
-  app: "multi-docker"
-  env: "Multidocker-env"
+  app: "docker-multi"
+  env: "Dockermulti-env"
   bucket_name: "elasticbeanstalk-eu-west-3-248319281910"
-  bucket_path: "multidocker"
+  bucket_path: "dockermulti"
   on:
     branch: master
   access_key_id: "$AWS_ACCESS_KEY"
